--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -27,9 +28,10 @@
       <form id="form-agenda">
         <input type="text" id="Nome" required placeholder="Nome" />
         <input type="tel" id="Telefone" required placeholder="Telefone" />
-        <button type="submit" id="Cadastrar">Cadastrar</button>   
+        <button type="submit" id="btn_salvar">Salvar</button>   
+
     </form>   
     </div>
-    <script src="./main.js"></script>
+   
 </body>
 </html>
